--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     
     "dev": "next dev",
-    "build": "prisma generate && vercel build",
+    "build": "prisma generate && vercel build --prod",
     "start": "next start",
     "lint": "next lint",
     "postinstall":"prisma generate"
