feat: vercel build --prod to build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     
     "dev": "next dev",
-    "build": "prisma generate && vercel build --prod",
+    "build": "prisma generate && build ",
     "start": "next start",
     "lint": "next lint",
     "postinstall":"prisma generate"
